--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Balaji Selvakumar</h1>
         <p>Email: <a href="mailto:balase22@terpmail.umd.edu">balase22@terpmail.umd.edu</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/balaji-selvakumar/">linkedin.com/in/balaji-selvakumar</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/balaji-selvakumar-b788b7186/">linkedin.com/in/balaji-selvakumar</a></p>
         <p>GitHub: <a href="https://github.com/BALA22-cyber">github.com/BALA22-cyber</a></p>
     </header>
 
