--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Balaji Selvakumar's Professional Portfolio">
+    <meta name="description" content="Balaji Selvakumar's Portfolio">
     <title>Balaji Selvakumar | Robotics Engineer</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,6 +14,17 @@
         <p>LinkedIn: <a href="https://www.linkedin.com/in/balaji-selvakumar-b788b7186/">Balaji Selvakumar</a></p>
         <p>GitHub: <a href="https://github.com/BALA22-cyber">github.com/BALA22-cyber</a></p>
     </header>
+
+    <!-- Add the navigation here -->
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#publications">Publications</a></li>
+        </ul>
+    </nav>
 
     <section id="about">
         <h2>Research Interests</h2>
