--- a/index.html
+++ b/index.html
@@ -3,79 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Balaji Selvakumar's Portfolio">
-    <title>Balaji Selvakumar | Robotics Engineer</title>
+    <meta name="description" content="Balaji Selvakumar - Robotics Engineer, Machine Learning Researcher">
+    <title>Balaji Selvakumar</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Balaji Selvakumar</h1>
-        <p>Email: <a href="mailto:balase22@terpmail.umd.edu">balase22@terpmail.umd.edu</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/balaji-selvakumar-b788b7186/">Balaji Selvakumar</a></p>
-        <p>GitHub: <a href="https://github.com/BALA22-cyber">github.com/BALA22-cyber</a></p>
-    </header>
-
-    <!-- Add the navigation here -->
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#publications">Publications</a></li>
-        </ul>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Balaji Selvakumar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#work">Work</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#research">Research</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <section id="about">
-        <h2>Research Interests</h2>
-        <p>My research interests lie at the intersection of robotics, computer vision, and machine learning...</p>
+    <!-- About Section -->
+    <section id="about" class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>About Me</h2>
+                <p class="lead">I am a Robotics Engineer and Machine Learning Researcher, specializing in autonomous navigation, point cloud processing, and deep learning. My work bridges academic research with real-world applications in automation and robotics.</p>
+            </div>
+        </div>
     </section>
 
-    <section id="skills">
-        <h2>Skill Summary</h2>
-        <ul>
-            <li>Programming Languages: C++, C, Python, R, MATLAB, HTML, CSS3</li>
-            <li>Frameworks: ROS, ROS2, OpenCV, Tensorflow, Pytorch, Numpy, Scipy, Pandas...</li>
-            <li>Platforms: Linux, Web, Windows, Arduino, Raspberry Pi, Mac OSX</li>
-        </ul>
+    <!-- Work Section -->
+    <section id="work" class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Work Experience</h2>
+                <h4>Oak Ridge National Laboratory - Deep Learning Researcher (January 2024 – Present)</h4>
+                <p>At Oak Ridge National Laboratory, I am optimizing construction automation with deep learning for precision building tasks, including crane operations and retrofitting processes.</p>
+
+                <h4>Achara Technologies - Machine Learning Intern (August 2019 – June 2020)</h4>
+                <p>Developed supervised learning algorithms that improved fabric inspection speeds by 30%, directly impacting production speed and quality control.</p>
+            </div>
+        </div>
     </section>
 
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li>Masters of Science - Robotics, University of Maryland College Park, USA</li>
-            <li>Bachelor of Technology - Mechatronics, Sri Krishna College of Engineering and Technology, India</li>
-        </ul>
+    <!-- Research Section -->
+    <section id="research" class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Research Experience</h2>
+                <h4>Oak Ridge National Laboratory - Deep Learning Research Intern (January 2024 – Present)</h4>
+                <p>Working on precision robotics, sensor integration, and dataset development for building automation systems. Developed a public dataset for object detection and segmentation using point clouds.</p>
+
+                <h4>GAMMA Lab, University of Maryland - Graduate Researcher (July 2023 – December 2023)</h4>
+                <p>Implemented SLAM algorithms for autonomous campus-wide navigation using LIDAR and IMU integration for real-time mapping and localization.</p>
+            </div>
+        </div>
     </section>
 
-    <section id="experience">
-        <h2>Work Experience</h2>
-        <h3>Oak Ridge National Laboratory - Deep Learning Researcher (Jan 2024 – Present)</h3>
-        <p>Actively contributing to the ongoing development of the Real-Time Evaluator (RTE) project...</p>
-
-        <h3>Achara Technologies - Machine Learning Intern (Aug 2019 – Jun 2020)</h3>
-        <p>Built a machine learning architecture for inspecting fabric defects...</p>
+    <!-- Projects Section -->
+    <section id="projects" class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Projects</h2>
+                <ul>
+                    <li>Deep Learning for Point Cloud Segmentation: Improved point cloud segmentation using downsampling techniques.</li>
+                    <li>Autonomous Robotics: Developed autonomous systems for object retrieval, implementing SLAM and motion planning algorithms.</li>
+                    <li>Brain Tumor Classification: Achieved 98% accuracy using deep learning models for medical image analysis.</li>
+                </ul>
+            </div>
+        </div>
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li>Deep Learning and 3D Point Cloud: Fine-tuned point cloud segmentation algorithm using Pytorch...</li>
-            <li>Autonomous Robotics: Developed Autonomous Baron using Raspberry Pi for object retrieval...</li>
-            <li>Brain Tumor Classification: Achieved 98% accuracy in MRI classification using deep learning models...</li>
-        </ul>
+    <!-- Contact Section -->
+    <section id="contact" class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Contact</h2>
+                <p>Email: <a href="mailto:balase22@terpmail.umd.edu">balase22@terpmail.umd.edu</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/balaji-selvakumar-b788b7186/">Balaji Selvakumar</a></p>
+                <p>GitHub: <a href="https://github.com/BALA22-cyber">github.com/BALA22-cyber</a></p>
+            </div>
+        </div>
     </section>
 
-    <section id="publications">
-        <h2>Publications</h2>
-        <ul>
-            <li><a href="https://iopscience.iop.org/article/10.1088/1757-899X/993/1/012117/pdf">Automatic Coconut Processing Machine</a></li>
-            <li><a href="https://iopscience.iop.org/article/10.1088/1757-899X/1059/1/012013/meta">Carry Lookahead Generator in Reversible Logic</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Balaji Selvakumar | <a href="mailto:balase22@terpmail.umd.edu">Contact Me</a></p>
+    <!-- Footer -->
+    <footer class="text-center mt-5">
+        <p>&copy; 2024 Balaji Selvakumar</p>
     </footer>
+
+    <!-- Scripts for Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
