--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about.html">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="resume.html">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -24,14 +25,14 @@
     <main>
         <section id="home">
             <h1>Balaji Selvakumar</h1>
-            <h2>Robotics Engineer</h2>
+            <h2>Robotics/ Deep Learning Engineer</h2>
             <p>Email: <a href="mailto:balase22@terpmail.umd.edu">balase22@terpmail.umd.edu</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/balaji-selvakumar-b788b7186/">Balaji Selvakumar</a></p>
             <p>GitHub: <a href="https://github.com/BALA22-cyber">github.com/BALA22-cyber</a></p>
             <p>Mobile: 202-642-2054</p>
         </section>
 
-        <section id="about">
+        <!-- <section id="about">
             <h2>Research Interests</h2>
             <p>My research interests lie at the intersection of robotics, computer vision, and machine learning. I am passionate about developing intelligent autonomous systems, with a focus on SLAM, deep learning for perception, vision-based robot learning, sensor fusion, real-time robotic systems, and human-robot interaction[1].</p>
             
@@ -48,7 +49,7 @@
                 <li>Masters of Science - Robotics, University of Maryland College Park, USA (Jan 2022 - Dec 2023)</li>
                 <li>Bachelor of Technology - Mechatronics, Sri Krishna College of Engineering and Technology, India (Aug 2017 - May 2021)</li>
             </ul>
-        </section>
+        </section> -->
 
         <section id="experience">
             <h2>Work Experience</h2>
