updated about page

--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
 
             <p>My journey in robotics is marked by a strong blend of theoretical knowledge and practical application, enhanced by advanced coursework in Robot Programming, Robot Perception, Deep Learning and AI, Autonomous Robotics, and Human-Robot Interaction. I am skilled in programming languages such as C++, Python, and MATLAB, and have extensive experience with robotics platforms including ROS, ROS2, and various simulation tools.</p>
 
-            <p>I have applied my knowledge in real-world settings with significant impact. At Oak Ridge National Laboratory, I'm actively contributing to the Real-Time Evaluator (RTE) project, enhancing precision in building component placement during crane installation. Previously, at Achara Technologies, I built a machine learning architecture for inspecting fabric defects, significantly improving inspection speed and accuracy.</p>
+            <p>I have applied my knowledge in real-world settings with significant impact. At Oak Ridge National Laboratory, I'm actively contributing to the Real-Time Evaluator (RTE) project, enhancing precision in building component placement during crane installation. I am also working on developing Deep CuBES project where we have collected and validated Building scans using Leica MS60 and validated and created a buildings dataset for public use and for our own model training.</p>
 
-            <p>I am passionate about leveraging my skills to contribute to cutting-edge projects in robotics and automation, and I am eager to bring my strong technical background and innovative approach to new challenges in the field.</p>
+            <p>I am passionate about leveraging my skills to contribute to cutting-edge projects in robotics and deep learning, and I am eager to bring my strong technical background and innovative approach to new challenges in the field.</p>
         </section>
 
         <section class="about-details">
@@ -46,7 +46,59 @@
                 <li><strong>Specialization:</strong> Robotics/Deep learning</li>
             </ul>
 
-            <p>A Robotics Engineer with a strong foundation in mechatronics and a passion for developing intelligent robotic systems. Proficient in machine learning, computer vision, and autonomous systems, excels at integrating innovative technologies to design smart, efficient solutions.</p>
+            <p>A Robotics Engineer with a strong foundation in developing intelligent robotic systems. I have experience tackling a wide range of challenges, including tasks such as sensor fusion and calibration, mapping and relocalization, social navigation, data sampling and augumentation to improve model accuracy.</p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3>Programming Languages</h3>
+                    <ul>
+                        <li>C++</li>
+                        <li>Python</li>
+                        <li>MATLAB</li>
+                        <li>R</li>
+                        <li>C</li>
+                        <li>HTML</li>
+                        <li>CSS3</li>
+                    </ul>
+                </div>
+                <div class="col-lg-6">
+                    <h3>Frameworks & Tools</h3>
+                    <ul>
+                        <li>ROS, ROS2</li>
+                        <li>OpenCV</li>
+                        <li>TensorFlow</li>
+                        <li>PyTorch</li>
+                        <li>NumPy, SciPy, Pandas</li>
+                        <li>Gazebo</li>
+                        <li>Git</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3>Areas of Expertise</h3>
+                    <ul>
+                        <li>Robotics</li>
+                        <li>Computer Vision</li>
+                        <li>Machine Learning</li>
+                        <li>Path Planning</li>
+                        <li>Autonomous Systems</li>
+                    </ul>
+                </div>
+                <div class="col-lg-6">
+                    <h3>Platforms</h3>
+                    <ul>
+                        <li>Linux</li>
+                        <li>Windows</li>
+                        <li>Arduino</li>
+                        <li>Raspberry Pi</li>
+                        <li>Mac OSX</li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 
