UI element has been updated, projects and work experience needs to be updated properly. Need to add autonomous global navigation, 809t, and orbslam project once done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#experience" class="nav-link">Experience</a></li>
           <li><a href="#projects" class="nav-link">Projects</a></li>
+          <li><a href="#publications" class="nav-link">Publications</a></li>
           <li><a href="#skills" class="nav-link">Skills</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
@@ -113,22 +114,21 @@
                   <span class="stat-label">Projects Completed</span>
                 </div>
                 <div class="stat-item">
-                  <span class="stat-number">2</span>
+                  <span class="stat-number">5</span>
                   <span class="stat-label">Publications</span>
                 </div>
               </div>
               <p class="about-paragraph">
-                Hello! I am a dedicated Robotics Engineer with a Master of Science in Robotics from the University of Maryland, College Park. 
-                With a Bachelor's in Mechatronics from Sri Krishna College of Engineering and Technology, I possess a deep understanding of both 
-                mechanical systems and advanced robotics.
+                Hello! I'm a robotics engineer and researcher with hands-on experience in developing autonomous systems, deep learning for perception, and sensor fusion. 
+                My work spans across real-time robotic applications, SLAM, and precision measurement for construction automation and including point cloud segmentation. 
+                I’ve contributed to projects at Oak Ridge National Laboratory, including automated building envelope segmentation and robotic laser tracking, and previously developed social navigation frameworks and large-scale mapping at the University of Maryland’s GAMMA Lab.
               </p>
               <p class="about-paragraph">
-                My journey in robotics is marked by a strong blend of theoretical knowledge and practical application, enhanced by advanced 
-                coursework in Robot Programming, Robot Perception, Deep Learning and AI, Autonomous Robotics, and Human-Robot Interaction.
+                My journey in robotics is marked by a strong blend of theoretical knowledge and practical application, enhanced by experience in Robot Perception, Deep Learning, Autonomous Robot Mapping and Navigation.
               </p>
               <p class="about-paragraph">
                 I have applied my knowledge in real-world settings with significant impact. At Oak Ridge National Laboratory, I'm actively 
-                contributing to the Real-Time Evaluator (RTE) project, enhancing precision in building component placement during crane installation.
+                contributing to the Real-Time Evaluator (RTE) project, which uses a robotic total station, enhancing precision in building component placement during crane installation.
               </p>
               <a href="assets/files/bala_resume.pdf" class="btn btn-primary" download>
                 <i class="fas fa-download"></i> Download Resume
@@ -167,7 +167,7 @@
                     <p>Developed deep learning techniques (PointNet++, SuperPoint Transformers) for semantic segmentation to extract window dimensions from point clouds and create digital twin BIM models for building retrofitting automation.</p>
                     <div class="project-links">
                       <a href="https://www.energy.gov/sites/default/files/2024-11/bto-peer-2024-deep-learning-point-cloud-maldonado.pdf" target="_blank">
-                        <i class="fas fa-file-pdf"></i> Research Paper
+                        <i class="fas fa-file-pdf"></i> Peer review paper
                       </a>
                     </div>
                   </div>
@@ -177,6 +177,19 @@
                     <div class="project-links">
                       <a href="https://globalrenewablenews.com/article/energy/category/climate-change/82/1087474/ornl-demonstrates-affordable-energy-efficient-low-carbon-building-technologies-on-national-mall-during-hud-innovation-housing-showcase.html" target="_blank">
                         <i class="fas fa-newspaper"></i> News Article
+                      </a>
+                    </div>
+                  </div>
+                  <div class="project-item">
+                    <h4><i class="fas fa-database"></i> ORNOBEL Dataset Library</h4>
+                    <p>Created comprehensive labeled point cloud dataset of building scans using Leica Total Station with <6mm accuracy. Developed public dataset library for researchers using Auto-Cubes Algorithm (ML-based DB-Scan customizable tool).</p>
+                  </div>
+                  <div class="project-item">
+                    <h4><i class="fas fa-robot"></i> FAMI & Robotic Laser Tracking</h4>
+                    <p>Optimized real-time panel orientation tracking by fusing MS60 with IMU inputs. Developed data extraction programs for RoboDyne software using AT960 and T-probe for enhanced robotic precision.</p>
+                    <div class="project-links">
+                      <a href="https://construction-robots.github.io/papers/83.pdf" target="_blank">
+                        <i class="fas fa-file-pdf"></i> Research Paper
                       </a>
                     </div>
                   </div>
@@ -315,6 +328,86 @@
                   <span class="tech-tag">Transformers</span>
                   <span class="tech-tag">3D Segmentation</span>
                   <span class="tech-tag">PyTorch Lightning</span>
+                </div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="project-image">
+                <img src="assets/images/first.webp" alt="Multi-Camera Object Tracking">
+                <div class="project-overlay">
+                  <div class="project-links">
+                    <a href="#" target="_blank">
+                      <i class="fas fa-external-link-alt"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="project-content">
+                <h3>Multi-Camera Object Tracking</h3>
+                <p>Advanced multi-camera multi-object tracking system using YOLO backbone with pose estimation for ReID and tracking in dynamic environments.</p>
+                <div class="tech-stack">
+                  <span class="tech-tag">YOLO</span>
+                  <span class="tech-tag">Pose Estimation</span>
+                  <span class="tech-tag">Computer Vision</span>
+                  <span class="tech-tag">ReID</span>
+                </div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="project-image">
+                <img src="assets/images/second.webp" alt="Autonomous Baron Robot">
+                <div class="project-overlay">
+                  <div class="project-links">
+                    <a href="#" target="_blank">
+                      <i class="fas fa-external-link-alt"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="project-content">
+                <h3>Autonomous Baron Robot</h3>
+                <p>Developed autonomous robot using Raspberry Pi for object retrieval with computer vision and navigation capabilities.</p>
+                <div class="tech-stack">
+                  <span class="tech-tag">Raspberry Pi</span>
+                  <span class="tech-tag">Computer Vision</span>
+                  <span class="tech-tag">Robotics</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="publications" class="section publications-section">
+        <div class="container">
+          <div class="section-header">
+            <h2 class="section-title">Publications</h2>
+            <p class="section-subtitle">Research contributions and academic publications</p>
+          </div>
+          <div class="publications-grid">
+            <div class="publication-card">
+              <div class="publication-icon">
+                <i class="fas fa-file-alt"></i>
+              </div>
+              <div class="publication-content">
+                <h3>Design and Development of Automatic Coconut Processing Machine</h3>
+                <p class="publication-description">Research on automated coconut processing systems for improved efficiency and reduced manual labor in agricultural applications.</p>
+                <div class="publication-meta">
+                  <span class="publication-type">Conference Paper</span>
+                  <span class="publication-year">2020</span>
+                </div>
+              </div>
+            </div>
+            <div class="publication-card">
+              <div class="publication-icon">
+                <i class="fas fa-microchip"></i>
+              </div>
+              <div class="publication-content">
+                <h3>Design and implementation of carry Look ahead generator in reversible logic using nano QCA</h3>
+                <p class="publication-description">Novel approach to implementing carry look-ahead generators using reversible logic principles with quantum-dot cellular automata for low-power computing applications.</p>
+                <div class="publication-meta">
+                  <span class="publication-type">Journal Paper</span>
+                  <span class="publication-year">2019</span>
                 </div>
               </div>
             </div>
